# usekit

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py
docs/base/: SESSIONS.md
docs/base/manual/support/: s.md  ud.md  ut.md  uw.md
docs/base/manual/usekit/: 01_overview.md  02_routing.md  03_io.md  04_exec.md  05_navi.md
examples/colab_ledger_app/: COLAB_CELLS.md  README.md  TREE.txt  colab_run_ledger_app.py  colab_setup.py
examples/json_append_emit/: README.md  TREE.txt  json_append_emit_demo.py
examples/ledger_app/: ledger_app_README.md  ledger_app_builder.py  ledger_app_builder_short.py
examples/pyp_args/: README.md  pyp_args_builder.py
examples/sql_crud_variable/: README.md  TREE.txt  sql_crud_variable_demo.py
examples/ud_practice/: run.py
examples/ud_sample/: run.py
usekit/: .env.example  __init__.py  usemain.py
usekit/classes/common/errors/: helper_debug.py  helper_errors.py  helper_safe.py  helper_setupdebug.py
usekit/classes/common/fileops/: helper_backup.py  (+4 more)
usekit/classes/data/: class_data_io.py  class_data_sp.py
usekit/classes/exec/: class_exec_io.py
usekit/classes/navi/: class_navi_io.py
usekit/cli/: __init__.py  __main__.py  _entry.py  main.py
usekit/help/: use_help.py
usekit/infra/: exec_signature.py  io_signature.py  navi_signature.py  params_alias.py  params_map.py  params_multi.py  params_value.py
usekit/infra/help/: help_system.py  io_signature_doc.py
usekit/src/base/: calc.py  demo.py  learning_plan.py  ledger.py  main.py  score_app.py  test.py
usekit/src/sub/: utils.py
usekit/sys/sys_km/: test_paths.km
usekit/sys/sys_yaml/: sys_const.yaml
usekit/tools/editor/: __BUILD_ID.txt  clear_cache.html  cm6.bundle.js  float-pills.css  index.html  manifest.json  open_editor.py  style.css  sw.js  theme-dark.css  theme-light.css  theme-white.css  use_editor.py
usekit/tools/keymemory/: README.md  SUMMARY.md  __init__.py  base.py  examples.py  parser.py  test_keymemory.py
usekit/tools/navi/: navi_convert.py  navi_convert_trio.py
(+235 files in other folders)
